[project]
name = "py-workflow-test"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "Laur"}
]
maintainers = [
  {name = "Laur"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/laur89/py_workflow_test/issues"
changelog = "https://github.com/laur89/py_workflow_test/blob/master/changelog.md"
homepage = "https://github.com/laur89/py_workflow_test"

[project.scripts]
py_workflow_test = "py_workflow_test.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

[tool.zest-releaser]
extra-message = "[CI SKIP]"
# do not push to git remote:
push-changes = false
# do not release to pypi:
release = false
history_format = "md"

